--- a/src/Application/Sonata/UserBundle/Resources/translations/SonataUserBundle.ru.yml
+++ b/src/Application/Sonata/UserBundle/Resources/translations/SonataUserBundle.ru.yml
@@ -1,2 +1,3 @@
 Bad credentials.: Неверный логин или пароль
 sonata_user_already_authenticated: Вы уже прошли авторизацию
+User account is disabled.: Пользователь заблокирован
